--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "inquirer": "^8.2.4",
+    "jest": "^29.3.1",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
